RESOLVED FIXED194774
WebPageProxy::didFinishDocumentLoadForFrame() crashing in WPE and GTK+ ports
https://bugs.webkit.org/show_bug.cgi?id=194774
Summary WebPageProxy::didFinishDocumentLoadForFrame() crashing in WPE and GTK+ ports
Claudio Saavedra
Reported 2019-02-18 04:41:11 PST
WebPageProxy::didFinishDocumentLoadForFrame() crashing in WPE and GTK+ ports
Attachments
Patch (1.99 KB, patch)
2019-02-18 04:41 PST, Claudio Saavedra
no flags
Claudio Saavedra
Comment 1 2019-02-18 04:41:31 PST
Claudio Saavedra
Comment 2 2019-02-18 06:44:43 PST
Alex Christensen
Comment 3 2019-02-18 12:46:59 PST
Comment on attachment 362290 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362290&action=review Null checking navigation before using it is fine, but the way you did it here makes it hard to read and see where the assignment is done. Could we keep the assignment on its own line? > Source/WebKit/ChangeLog:3 > + WebPageProxy::didFinishDocumentLoadForFrame() crashing in WPE and GTK+ ports Why is this only WPE and GTK? Under what conditions does it crash?
Alex Christensen
Comment 4 2019-02-18 13:30:48 PST
Radar WebKit Bug Importer
Comment 5 2019-02-18 13:39:37 PST
Note You need to log in before you can comment on or make changes to this bug.