WebPageProxy::didFinishDocumentLoadForFrame() crashing in WPE and GTK+ ports https://bugs.webkit.org/show_bug.cgi?id=194774

Patch by Claudio Saavedra <csaavedra@igalia.com> on 2019-02-18
Reviewed by Alex Christensen.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didFinishDocumentLoadForFrame):
Null check navigation before using it.
This is a regression from r241451.



Canonical link: https://commits.webkit.org/209166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241735 268f45cc-cd09-0410-ab3c-d52691b4dbfc